CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(pnet)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/tests)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/cli)

INSTALL(DIRECTORY include/ DESTINATION include/${PROJECT_NAME})
INSTALL(DIRECTORY lib/ DESTINATION lib)
INSTALL(DIRECTORY bin/ DESTINATION bin)
