CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(pnet)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/tests)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/cli)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include/${PROJECT_NAME})
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/lib/ DESTINATION lib)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/bin/ DESTINATION bin)
