CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(pnet)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/tests)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/cli)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include/${PROJECT_NAME})
